<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="40dp">
        <LinearLayout
            android:id="@+id/TableLayout2"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:background="#FAFAFA"
            >
            <ImageButton
                android:id="@+id/friend_bar"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/friend"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                android:src="@drawable/ranking_icon_highlight"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:id="@+id/timer"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/timer"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                android:src="@drawable/clock_icon_line"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/home"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/home"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                android:src="@drawable/deadline_icon_line"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/puzzle"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/maze"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                android:src="@drawable/puzzle_icon_line"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/profile"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/prof"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                android:src="@drawable/profile_icon"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </LinearLayout>>

</LinearLayout>